--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "validation-form",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hhh1361.github.io/validation-form/",
   "dependencies": {
+    "eslint-import-resolver-alias": "^1.1.2",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
+    "react-connect": "^0.4.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,5 +35,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.4.1",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "husky": "^3.1.0",
+    "jquery": "^3.4.1",
+    "lint-staged": "^9.5.0",
+    "popper.js": "^1.16.0",
+    "prettier": "^1.19.1",
+    "react-redux": "^7.1.3"
   }
 }
