--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-connect": "^0.4.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
