--- a/.eslintrc
+++ b/.eslintrc
@@ -26,11 +26,12 @@
     "class-methods-use-this": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "jsx-a11y/anchor-is-valid": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
     "react/no-danger": 0,
     "react/prop-types": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-curly-brace-presence": ["error", { "props": "never", "children": "never" }],
-    "import/no-unresolved": "off",
+    "import/no-unresolved": ["error", { "commonjs": true }],
     "import/extensions": 0,
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "import/prefer-default-export": 0,
@@ -38,12 +39,5 @@
       "singleQuote": true,
       "trailingComma": "all"
     }]
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
   }
 }
