--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://hhh1361.github.io/validation-form/",
   "dependencies": {
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
